<resources>
    <string name="app_name">Student Time Tracker</string>

    <!-- Bottom nav   -->
    <string name="nav_timeline">Timeline</string>
    <string name="nav_trackTime">Track time</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_profile">Profile</string>

    <!-- Left nav   -->
    <string name="nav_io_data">Import/Export Data</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">Information</string>
    <string name="nav_contact">Contact</string>

    <!-- Statistics fragment   -->
    <string name="statistics_tab_day">Day</string>
    <string name="statistics_tab_week">Week</string>
    <string name="statistics_tab_month">Month</string>
    <string name="statistics_tab_year">Year</string>



    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="notifications_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your name</string>

    <!-- Sync Preferences -->
    <string name="allow_notifications">Allow notifications</string>

    <!-- TrackTimeFragment    -->
    <string name="start_task">Start</string>
    <string name="stop_task">Stop</string>
    <string name="task_name_hint">Enter task name</string>
    <string name="add_project">Add Project</string>
    <string name="enter_project_hint">Enter project</string>

    <!-- Info Activity -->
    <string name="project_name">Student Time Tracker</string>
    <string name="description">Opis</string>
    <string name="description_value">Aplikacja służy do mierzenia czasu pracy nad róznymi projektami. Ty sam możesz nadać nazwę projektów. Możesz skorzystać z naszych propozycji np. "Projekt z Androida", "Czytanie książek" czy "Jazda na rowerze". Dla każdego projektu możesz oddzielnie mierzyc czas po przez taski. Skorzystaj z rozbudowanego podsumowania, możesz swoje aktywności sprawdzać w rozliczeniach dziennych, tygodniowych, miesięcznych czy nawet rocznych. Nasz wykres kołowy pomoże utrzymywać czasową aktywność w Twoich projektach na wysokim poziomie.</string>
    <string name="instruction">Instrukcja</string>
    <string name="instruction_value">Aby zacząć mierzyć czas dodaj swój pierwszy projekt i w ramach projektu dodaj pierwsze zadanie do którego będziesz mierzył czas. Jest to intuicyjnie proste. Do dzieła!</string>
    <string name="about">O nas</string>
    <string name="about_value">Aplikacja została wykonana jako projekt zaliczeniowy z przedmiotu "Wprowadzenie do technologi mobilnych". Autorem jest wysoko wyspecjalizowany zespół studentów informatyk w skład którego wchodzą:</string>
    <string name="author_1">Szymon Borowy</string>
    <string name="author_2">Dominik Kołodziej</string>
    <string name="author_3">Marcin Kozak</string>
    <string name="footer">Dziękujemy za pobranie naszej aplikacji!</string>

</resources>
