<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_timeline"
        android:enabled="true"
        android:icon="@drawable/ic_timeline"
        android:title="@string/nav_timeline"/>

    <item
        android:id="@+id/nav_trackTime"
        android:enabled="true"
        android:icon="@drawable/ic_timer"
        android:title="@string/nav_trackTime"/>

    <item
        android:id="@+id/nav_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/nav_statistics"/>

    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile"/>
</menu>