<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_io_data"
            android:icon="@drawable/ic_timer"
            android:tint="@color/colorAccent"
            android:title="@string/nav_io_data" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:tint="@color/colorAccent"
            android:title="@string/nav_settings" />
    </group>
    <group>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:tint="@color/colorAccent"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email"
            android:tint="@color/colorAccent"
            android:title="@string/nav_contact" />
    </group>
</menu>